Mon Mar 16 15:51:16 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* master.rb: [Bug: #43], [Bug: #44] 対応
	
Wed Mar 11 19:08:35 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* b-input-iota.rb: [Bug: #21]対応
	* bin/controller, bin/master, bin/node, bin/controller,
	  bin/processor, fairy.rb, fairy.conf, conf.rb:
	  CONF.DEBUG_THREAD_ABORT_ON_EXCEPTION 対応
	* bin/controller, bin/master, bin/node, bin/controller,
	  bin/processor, fiary.rb, fairy.conf, conf.rb:
	  CONF.USE_RESOLV_REPLACE 対応
	* Master#node: [Bug: #22]対応
	* Log::log: 新forwardable対応
	* conf.rb: fairy.conf 読み込み時に環境変数 FAIRY_HOME を見るように
	  した.
	
Thu Mar  5 18:00:47 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* port.rb, etc/fairy.conf, conf.rb: 進行状況Logging機能追加

Wed Mar  4 18:17:29 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* bin/fairy-rm: 追加

Wed Mar  4 16:49:44 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* job/exec.rb, backend/b-exec.rb, node/n-exec.rb: exec追加

Mon Mar  2 17:59:37 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* bin/fairy-cp: 追加
	* etc/fairy.conf, share/conf.rb: CONF.VF_SPLIT_SIZE 追加

Fri Feb 27 21:37:13 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* port.rb: buffering policy framework 追加, FileBufferdQueue 追加
	* b-inputtable.rb, b-local-file-output.rb, b-merge-group_by.rb,
	  bhere.rb, fairy.conf, n-direct-product.rb, n-file-output.rb,
	  n-filter.rb modified: node/n-group-by.rb, n-join.rb,
	  n-local-file-output.rb, n-single-exportable.rb, n-splitter.rb,
	  n-zipper.rb, block-source.rb: buffering policy framework 対応
	* */addins.rb: *19.rb, *18.rb 対応
	* b-inputtable18.rb, b-inputtable19.rb, sort19.rb: それそれのバー
	  ジョン対応ファイル分離
	
Mon Feb 16 19:55:39 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* ruby1.8でいつのまにか動かなくなっていた対応

Mon Feb 16 18:57:14 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* ruby1.9系で例外の伝搬がうまく行かない対応(ruby1.9のバグだった)
	* etc/fairy.conf: ruby-1.9.1をテストの標準にした, 
			  DEBUG_FULL_BACKTRACEを追加